# daldbinspector

./: LICENSE.md  README.md  pyproject.toml
daldbi/: __init__.py  daldbi.py
